LastFM Bulk Albums Endpoint
