# NextJS/src/api/openAPI/spec.yml
@@ -12,22 +12,87 @@ tags:
     description: Authentication related Operations
   - name: data
     description: Database Related Operations
-  - name: predictor 
+  - name: predictor
     description: Machine Learning Model related Operations
 servers:
   - url: /api
 paths:
-  /database/user/isAdmin:
-    post:
-      summary: Checks if a user is adm
-      description: Optional extended description in CommonMark or HTML.
+  /lastFM/getBulkAlbumTags:
+    get:
+      summary: Gets album tags of given album names and artists
+      description: The endpoint only alllows a maximum of 50 pairs artist-album per request.
+      requestBody:
+        description: A bunch of albums and artists
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LastFMTagReq"
+
       responses:
-        '200':    # status code
-          description: A JSON array of user names
+        "200":
+          description: A successful operation.
           content:
             application/json:
-              schema: 
-                type: array
-                items: 
-                  type: string
-  
+              schema:
+                $ref: "#/components/schemas/LastFMTagResponse"
+
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+      tags:
+        - lastFM
+
+components:
+  schemas:
+    Error:
+      type: object
+      properties:
+        error:
+          type: string
+
+    LastFMTagReq:
+      type: object
+      required:
+        - albums
+      properties:
+        albums:
+          type: array
+          items:
+            type: object
+            properties:
+              album_name:
+                type: string
+              artist_name:
+                type: string
+
+    LastFMTagResponse:
+      type: object
+      required:
+        - album_tags
+      properties:
+        album_tags:
+          type: array
+          items:
+            $ref: "#/components/schemas/LastFMTag"
+
+    LastFMTag:
+      type: object
+      properties:
+        album_name:
+          type: string
+        artist_name:
+          type: string
+        tags:
+          type: array
+          items:
+            type: object
+            properties:
+              name:
+                type: string
+              url:
+                type: string
